@@ -79,6 +79,7 @@ Corregida característica de Buscar menú. Ahora está habilitado por defecto
 Corregido error al grabar snapshots .ZSF de Z88 cuando el bloque de RAM o de tarjeta de memoria no está comprimido
 Corregido mostrar texto en footer de F5/Button menu
 Corregido bug que se reabria el menu al executar comando run desde debug cpu y la opcion --allow-background-windows estaba desactivada
+Corregido recuperación de posición de ventana después de restore/desminimizar
 Corregido sonido de MSX de pulsación de teclas
 
 * Cambios varios:
