@@ -79,6 +79,7 @@ Fixed loading .nex snapshots and MMU not managed correctly
 Fixed Search menu feature. Now it's enabled by default
 Fixed bug saving .ZSF Z88 snapshot when RAM or Memory Card block is not compressed
 Fixed showing footer message F5/Button menu
+Fixed recovering window position after restore/unminimize
 Fixed bug reopening menu when executing run command on debug cpu and --allow-background-windows setting was disabled
 Fixed MSX keyclick sound
 
